# reddock

./: .gitignore  README.md
server/: Cargo.toml  README.md
server/migrations/: 20220205140606_reports.down.sql  20220205140606_reports.up.sql
server/src/: main.rs
server/src/components/: docker_list.rs  head.rs  mod.rs  report_list.rs  utils.rs
server/src/routes/: container.rs  home.rs  mod.rs  report.rs  status.rs
server/static/: pico.min.css
