[package]
name = "red-dock-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features = ["headers"] }
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }

tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1"
dotenv = "0.15"
jsonwebtoken = "7"
lazy_static = "1"
headers = "0.3"
chrono = "0.4"

sqlx = { version = "0.5", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
]}

bollard = "0.11"
